--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ sourceCompatibility = 11
 
 ext {
     set('springBootVersion', "2.1.0.RELEASE")
-    set('springCloudVersion', "Hoxton.RC2")
+    set('springCloudVersion', "Greenwich.SR4")
 }
 
 subprojects {
@@ -28,7 +28,7 @@ subprojects {
     }
 
     repositories {
-        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+//        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
         mavenCentral()
         maven { url 'https://repo.spring.io/milestone' }
     }
@@ -43,6 +43,8 @@ subprojects {
 //	implementation 'org.springframework.boot:spring-boot-starter-mail'
 //	implementation 'org.springframework.boot:spring-boot-starter-quartz'
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
+        implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
+        implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
 //	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 //	implementation 'org.flywaydb:flyway-core'
 //	implementation 'org.springframework.cloud:spring-cloud-bus'
@@ -76,7 +78,7 @@ subprojects {
 
     dependencyManagement {
         imports {
-            mavenBom 'org.springframework.boot.experimental:spring-boot-bom-r2dbc:0.1.0.M2'
+//            mavenBom 'org.springframework.boot.experimental:spring-boot-bom-r2dbc:0.1.0.M2'
             mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
             mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
             mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:${springBootVersion}"
