--- a/common-gateway/build.gradle
+++ b/common-gateway/build.gradle
@@ -4,6 +4,7 @@ version = '0.0.1-SNAPSHOT'
 dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
     implementation 'com.alibaba.csp:sentinel-spring-cloud-gateway-adapter'
 //    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'
 
