--- a/common-gateway/build.gradle
+++ b/common-gateway/build.gradle
@@ -4,8 +4,10 @@ version = '0.0.1-SNAPSHOT'
 dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
-    implementation 'com.alibaba.csp:sentinel-spring-cloud-gateway-adapter'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j:1.0.0.RELEASE'
+//    implementation 'com.alibaba.csp:sentinel-spring-cloud-gateway-adapter'
 //    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'
 
 }
