--- a/common-auth/build.gradle
+++ b/common-auth/build.gradle
@@ -1,3 +1,7 @@
 
-
 version = '0.0.1-SNAPSHOT'
+
+dependencies {
+	implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+	implementation 'org.springframework.cloud:spring-cloud-starter-security'
+}
