--- a/common-auth/build.gradle
+++ b/common-auth/build.gradle
@@ -3,5 +3,6 @@ version = '0.0.1-SNAPSHOT'
 
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
-	implementation 'org.springframework.cloud:spring-cloud-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-security'
 }
