--- a/common-auth/src/main/resources/bootstrap.yml
+++ b/common-auth/src/main/resources/bootstrap.yml
@@ -11,5 +11,11 @@ spring:
         server-addr: 127.0.0.1:8848
         file-extension: yaml
         prefix: common-auth
+  datasource:
+    platform: mysql
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/solby
+    username: root
+    password: root
 server:
   port: 8902
