--- a/common-gateway/build.gradle
+++ b/common-gateway/build.gradle
@@ -2,12 +2,13 @@
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
-
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j:1.0.0.RELEASE'
 //    implementation 'com.alibaba.csp:sentinel-spring-cloud-gateway-adapter'
 //    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'
+//    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+//    implementation 'org.springframework.security:spring-security-oauth2-jose'
 
 }
